Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-100978

A completely valid qml file with a block comment can result in a qmlcache compilation error

    XMLWordPrintable

Details

    • 795d7dafe5 (qt/qtdeclarative/dev) 795d7dafe5 (qt/tqtc-qtdeclarative/dev) 0858b973bd (qt/tqtc-qmlcompilerplus/6.2) 0adc4b6988 (qt/qtdeclarative/6.3)

    Description

       

       

      implicitHeight: Math.max(control.implicitBackgroundHeight + control.topInset + control.bottomInset,
       control.contentHeight + control.topPadding + control.bottomPadding
       /*+ (control.implicitHeaderHeight > 0 ? control.implicitHeaderHeight + control.spacing : 0)*/
       + (columnLayout.implicitHeight + control.spacing))
      

      gives:

      src/quickdialogs2/quickdialogs2quickimpl/.rcc/qmlcache/QuickDialogs2QuickImpl_qml/MessageDialog_qml.cpp:1315:1: error: '/*' within block comment [-Werror,-Wcomment]
       /*+ (control.implicitHeaderHeight > 0 ? control.implicitHeaderHeight + control.spacing : 0)*/
        

      The reason is that the qml compiler generates a block comment that has an embedded block comment:

      /*
       control.contentHeight + control.topPadding + control.bottomPadding
       /*+ (control.implicitHeaderHeight > 0 ? control.implicitHeaderHeight + control.spacing : 0)*/
       */
       // generate_LoadQmlContextPropertyLookup
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ulherman Ulf Hermann
            smd Jan Arve
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes